# gitflow-wotw-python

./: .bumpversion.cfg  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
background/: first_poc.py  gitflow-help
gitflow_wotw/: __init__.py  cli_file.py  command.py  constants.py  logging.yml
gitflow_wotw/action/: __init__.py  start_action.py
gitflow_wotw/actions/: __init__.py  base_action.py  checkout_action.py  delete_action.py  diff_action.py  finish_action.py  init_action.py  list_action.py  log_action.py  publish_action.py  pull_action.py  rebase_action.py  rename_action.py  set_action.py  start_action.py  track_action.py  version_action.py
gitflow_wotw/arguments/: __init__.py  back_merge_argument.py  base_argument.py  branch_argument.py  defaults_argument.py  delete_argument.py  delete_local_argument.py  delete_remote_argument.py  fetch_argument.py  ff_argument.py  ff_master_argument.py  file_argument.py  force_argument.py  get_argument.py  global_argument.py  help_argument.py  interactive_argument.py  keep_argument.py  keep_local_argument.py  keep_remote_argument.py  local_argument.py  message_argument.py  message_file_argument.py  parser.py  preserve_merges_argument.py  push_argument.py  push_develop_argument.py  push_master_argument.py  push_production_argument.py  push_tag_argument.py  rebase_argument.py  set_argument.py  show_commands_argument.py  showcommands_argument.py  sign_argument.py  signing_key_argument.py  sink_parser.py  squash_argument.py  system_argument.py  tag_argument.py  (+2 more)
gitflow_wotw/commands/: __init__.py  wotw_command.py
gitflow_wotw/components/: __init__.py  action.py  action_instance.py  argument.py  argument_group.py  argument_group_instance.py  argument_instance.py  base_action.py  base_argument.py  base_subcommand.py  branch_subcommand.py  command.py  command_instance.py  component_instance.py  subcommand_instance.py
tests/: test_cli_file.py  test_constants.py  test_main_module.py
(+135 files in other folders)
