[metadata]
name = gitflow-wotw
version = 0.6.0
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = ISC
description = gitflow-avh in Python
long_description = file: README.rst, LICENSE.rst
keywords =
	git
	gitflow
	gitflow-avh
classifiers =
	Development Status :: 1 - Planning
	Environment :: Console
	Topic :: Software Development :: Version Control :: Git
url = https://github.com/wizardsoftheweb/gitflow-wotw#readme
project_urls =
    Issue Tracker = https://github.com/wizardsoftheweb/gitflow-wotw/issues

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
    pyyaml
	pytest-runner
tests_require =
    pyyaml
	mock
	coverage
	pytest
	pytest-cov

[options.package_data]
* = *.yml

[options.entry_points]
console_scripts =
    git-wotw = gitflow_wotw.cli_file:cli

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=gitflow_wotw --color=yes

[aliases]
test = pytest
